--- a/index.html
+++ b/index.html
@@ -54,6 +54,18 @@
      <!--Link para as partículas-->
      <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 
+
+     <div class="codetheworld-io">
+    <a href="#" style="--color: #4267B2">
+      <I class="fa-bands fa-facebook-f"></I>
+    </a>
+    <a href="#" style="--color: #25D366">
+      <I class="fa-bands fa-whatsapp"></I>
+    </a>
+
+
+     </div>
+
      <!--Link main.js-->
      <script src="main.js"></script>
 
