icones wpp e fb

--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
 
      <div class="codetheworld-io">
     <a href="#" style="--color: #4267B2">
-      <I class="fa-bands fa-facebook-f"></I>
+      <i class="fa-brands fa-facebook-f"></i>
     </a>
     <a href="#" style="--color: #25D366">
-      <I class="fa-bands fa-whatsapp"></I>
+      <i class="fa-brands fa-whatsapp"></i>
     </a>
 
 
