--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<style>
+  html, body {
+    overflow: hidden;
+    touch-action: none;
+  }
+</style>
 
     <title>IDs de contas recuperadas</title>
 
