--- a/index.html
+++ b/index.html
@@ -62,15 +62,15 @@
      <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 
 
-     <div class="codetheworld-io">
-    <a href="#" style="--color: #4267B2">
+    <div class="codetheworld-io" style="position: fixed; top: 50%; right: 0; transform: translateY(-50%); display: flex; flex-direction: column; gap: 20px; z-index: 999;">
+   <a href="#" style="--color: #4267B2">
       <i class="fa-brands fa-facebook-f"></i>
     </a>
     <a href="#" style="--color: #25D366">
       <i class="fa-brands fa-whatsapp"></i>
     </a>
 
-
+     </div>
      </div>
 
      <!--Link main.js-->
